Use article tag

--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -41,7 +41,7 @@
                 <a href="/category/{{tag | slugify}}" class="tag">#{{tag}}</a>
                 {% endfor %}
             </div>
-            <div class="text">{{content}}</div>
+            <article class="text">{{content}}</article>
             {% if locale == "en" %}
             <a class="backlink" href="/en/blog"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                     fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
