Add categories to sidebar

--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -6,7 +6,7 @@
 {% endif %}
 
 <head>
-    {% include 'head.html' %}
+    {% include 'head' %}
     {% if noIndex == true %}
         <meta name="robots" content="noindex" />
     {% else %}
