--- a/contact.liquid
+++ b/contact.liquid
@@ -13,7 +13,7 @@ navOptions:
 <html lang="it">
 
   <head>
-    {% include 'head.html' %}
+    {% include 'head' %}
     <link rel="stylesheet" href="/styles/contact.css">
     <meta name="robots" content="index"/>
     <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}"/>
