--- a/index.liquid
+++ b/index.liquid
@@ -6,7 +6,7 @@ eleventyNavigation:
 <html lang="it">
 
 <head>
-    {% include 'head.html' %}
+    {% include 'head' %}
     <link rel="stylesheet" href="/styles/homepage.css">
     <meta name="robots" content="index" />
     <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}" />
@@ -82,5 +82,4 @@ eleventyNavigation:
         {% include 'menu' %}
     </aside>
 </body>
-
 </html>
