--- a/_includes/tagged-posts.liquid
+++ b/_includes/tagged-posts.liquid
@@ -11,7 +11,7 @@ noIndex: true
 {% endif %}
 
 <head>
-    {% include 'head.html' %}
+    {% include 'head' %}
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="/styles/tagged-posts.css">
 </head>
