--- a/blog.liquid
+++ b/blog.liquid
@@ -13,7 +13,7 @@ navOptions:
 <html lang="it">
 
 <head>
-  {% include 'head.html' %}
+  {% include 'head' %}
   <link rel="stylesheet" href="/styles/blog.css">
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}" />
