Add bold font, change category design

--- a/_includes/categories.liquid
+++ b/_includes/categories.liquid
@@ -1,5 +1,5 @@
 <div class="categories">
-    <h2>CATEGORIES</h2>
+    <h2>Blog categories</h2>
     <ul>
         <li><a href="/category/coltivazione" class="category">Coltivazione</a></li>
         <li>
