--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -33,7 +33,7 @@
     "@type": "Article",
     "headline": "{{title}}",
     "image": [
-      "/assets/avatar.png"
+      "{{ imagePath }}"
      ],
     "datePublished": "{{ date | date: '%B %e, %Y' }}",
     "dateModified": "{{ date | date: '%B %e, %Y' }}",
