--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -11,30 +11,9 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem;
-    margin: 0 auto;
     flex: 1;
 
-    .categories {
-        ul {
-            list-style: none;
-            padding: 0 1em;
-        }
-        width: 20%;
-        margin-top: 5rem;
-        .category {
-            color: #37be72;
-            font-size: var(--font-size-sm);
-            &:hover {
-                text-decoration: underline;
-            }
-        }
-
-        @media (max-width: $breakpoint-md) {
-            display: none;
-        }
-    }
+    @import 'categories';
 
     &-right {
         flex: 1;
