--- a/about.liquid
+++ b/about.liquid
@@ -12,60 +12,54 @@ navOptions:
 <!DOCTYPE html>
 <html lang="it">
 
-  <head>
-    {% include 'head' %}
-    <link rel="stylesheet" href="/styles/about.css">
-    <meta name="robots" content="index"/>
-    <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}"/>
-  </head>
+<head>
+  {% include 'head' %}
+  <link rel="stylesheet" href="/styles/about.css">
+  <meta name="robots" content="index" />
+  <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}" />
+</head>
 
-  <body>
-    {% include 'theme' %}
-    {% include 'header' %}
-    <main>
-      <div class="about">
-        <div class="breadcrumbs">
-          {% assign navPages = collections.all | eleventyNavigationBreadcrumb: "About", navOptions %}
-          <ul>
-          {%- for entry in navPages %}
-            <li{% if entry.url == page.url %} class="breadcrumb-active"{% endif %}>
-              <a href="{{ entry.url }}">{{ entry.title }}</a>
-            </li>
-          {%- endfor %}
-          </ul>
-        </div>
-        <h2>Chi siamo?</h2>
-
-        <p>Per dare una risposta alle attuali domande di consumo, coltivazione e mutevoli condizioni legali sulla
-          cannabis.
-                                                            
-                                                                            Attivi dal 2018, Canapa Coltivazione mette a disposizione a coltivatori/consumatori informazioni sulla
-                                                                            cannabis. Sono presenti infinite guide, articoli e molteplici risorse per rispondere a qualsiasi domanda
-                                                                            legata alla cannabis.
-        </p>
-
-        <h2>Note legali ⚠️</h2>
-
-        <p>Tutte le informazioni e conversazioni presenti in “Canapa Coltivazione” sono da intendersi
-          esclusivamente al fine di una ampia cultura generale sulla canapa.</p>
+<body>
+  {% include 'theme' %}
+  {% include 'header' %}
+  <main>
+    <div class="about">
+      <div class="breadcrumbs">
+        {% assign navPages = collections.all | eleventyNavigationBreadcrumb: "About", navOptions %}
+        {% include 'breadcrumbs' %}
       </div>
-    </main>
-    <footer class="page-footer">
-      <div class="container">
-        <small>Copyright
-          <b>{{site.author}}</b>
-        </small>
-      </div>
-    </footer>
-    <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
-    <aside id="sidebar">
-      <a href="javascript:toggleSidebar()" class="icon-btn" title="Close">
-        <svg class="icon">
-          <use href="/assets/cross.svg#content"/>
-        </svg>
-      </a>
-      {% include 'menu' %}
-    </aside>
-  </body>
+      <h2>Chi siamo?</h2>
+
+      <p>Per dare una risposta alle attuali domande di consumo, coltivazione e mutevoli condizioni legali sulla
+        cannabis.
+
+        Attivi dal 2018, Canapa Coltivazione mette a disposizione a coltivatori/consumatori informazioni sulla
+        cannabis. Sono presenti infinite guide, articoli e molteplici risorse per rispondere a qualsiasi domanda
+        legata alla cannabis.
+      </p>
+
+      <h2>Note legali ⚠️</h2>
+
+      <p>Tutte le informazioni e conversazioni presenti in “Canapa Coltivazione” sono da intendersi
+        esclusivamente al fine di una ampia cultura generale sulla canapa.</p>
+    </div>
+  </main>
+  <footer class="page-footer">
+    <div class="container">
+      <small>Copyright
+        <b>{{site.author}}</b>
+      </small>
+    </div>
+  </footer>
+  <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
+  <aside id="sidebar">
+    <a href="javascript:toggleSidebar()" class="icon-btn" title="Close">
+      <svg class="icon">
+        <use href="/assets/cross.svg#content" />
+      </svg>
+    </a>
+    {% include 'menu' %}
+  </aside>
+</body>
 
 </html>
