--- a/blog.liquid
+++ b/blog.liquid
@@ -27,13 +27,7 @@ navOptions:
     <div class="blog-content-right">
       <div class="breadcrumbs">
         {% assign navPages = collections.all | eleventyNavigationBreadcrumb: "Blog", navOptions %}
-        <ul>
-          {%- for entry in navPages %}
-          <li{% if entry.url==page.url %} class="breadcrumb-active" {% endif %}>
-            <a href="{{ entry.url }}">{{ entry.title }}</a>
-            </li>
-            {%- endfor %}
-        </ul>
+        {% include 'breadcrumbs' %}
       </div>
       <h1 class="title">Tutti gli articoli</h1>
       <p class="subtitle">Vedi i seguenti articoli</p>
