Reduce breadcrumb margin

--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -66,6 +66,11 @@ video {
             list-style: none;
         }
 
+        ol {
+            margin: 0;
+            list-style: none;
+        }
+
         li {
             display: inline-flex;
             a {
