--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -2,6 +2,9 @@
 {% if title %}
   {% assign metatitle = metatitle | prepend: " • " | prepend: title %}
 {% endif %}
+{% if isHomepage %}
+  {% assign metatitle = homeTitle %}
+{% endif %}
 {% assign metadesc = site.desc %}
 {% if snippet %}
   {% assign metadesc = snippet %}
