--- a/index.liquid
+++ b/index.liquid
@@ -1,6 +1,8 @@
 ---
 eleventyNavigation:
   key: Home
+isHomepage: true
+homeTitle: Canapa Colvitazione Homepage  
 ---
 <!DOCTYPE html>
 <html lang="it">
