--- a/index.liquid
+++ b/index.liquid
@@ -70,11 +70,7 @@ homeTitle: Canapa Colvitazione Homepage
                 </div>
             </div>
         </section>
-        <footer class="page-footer">
-            <div class="container">
-                <small>Copyright <b>{{site.author}}</b></small>
-            </div>
-        </footer>
+        {% include 'footer' %}
     </div>
     <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
     <aside id="sidebar">
