--- a/about.liquid
+++ b/about.liquid
@@ -44,13 +44,7 @@ navOptions:
         esclusivamente al fine di una ampia cultura generale sulla canapa.</p>
     </div>
   </main>
-  <footer class="page-footer">
-    <div class="container">
-      <small>Copyright
-        <b>{{site.author}}</b>
-      </small>
-    </div>
-  </footer>
+{% include 'footer' %}
   <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
   <aside id="sidebar">
     <a href="javascript:toggleSidebar()" class="icon-btn" title="Close">
