--- a/blog.liquid
+++ b/blog.liquid
@@ -55,13 +55,7 @@ navOptions:
       {% endfor %}
     </div>
   </main>
-  <footer class="page-footer">
-    <div class="container">
-      <small>Copyright
-        <b>{{site.author}}</b>
-      </small>
-    </div>
-  </footer>
+{% include 'footer' %}
   <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
   <aside id="sidebar">
     <a href="javascript:toggleSidebar()" class="icon-btn" title="Close">
