--- a/_includes/categories.liquid
+++ b/_includes/categories.liquid
@@ -1,23 +1,27 @@
 <div class="categories">
-    <h2>Blog categories</h2>
-    <ul>
-        <li><a href="/category/coltivazione" class="category">Coltivazione</a></li>
-        <li>
-            <ul>
-                <li><a href="/category/Tecniche-di-coltivazione" class="category">Tecniche di coltivazione</a></li>
-                <li><a href="/category/Substrato" class="category">Substrato</a></li>
-                <li><a href="/category/Fasi-cannabis" class="category">Fasi cannabis</a></li>
-                <li><a href="/category/Carenze-e-eccessi-nutrizionali" class="category">Carenze e eccessi
-                        nutrizionali</a></li>
-                <li><a href="/category/Raccolto" class="category">Raccolto</a> </li>
-                <li><a href="/category/Parassiti-Insetti-e-problemi-vari" class="category">Parassiti, Insetti e problemi
-                        vari</a></li>
-            </ul>
-        </li>
-        <li><a href="/category/Consumo" class="category">Consumo</a></li>
-        <li><a href="/category/Scienza" class="category">Scienza</a></li>
-        <li><a href="/category/Cbd" class="category">Cbd</a></li>
-        <li><a href="/category/Guide e ricette" class="category">Guide e ricette</a></li>
-        <li><a href="/category/Notizie" class="category">Notizie</a></li>
-    </ul>
+  <h2>Blog categories</h2>
+  <ul>
+    {% for category in categoriesData.categories %}
+      <li>
+        <a href="/category/{{category.title | slugify }}" class=" category">
+          {{category.title}}
+        </a>
+      </li>
+
+      <li>
+        {% if category.subcategories %}
+          <ul>
+            {%- assign subcats = category.subcategories -%}
+            {% for category in subcats %}
+              <li>
+                <a href="/category/{{category.title | slugify }}" class=" category">
+                  {{category.title}}
+                </a>
+              </li>
+            {% endfor%}
+          </ul>
+        {% endif %}
+      </li>
+    {% endfor%}
+  </ul>
 </div>
