--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -2,38 +2,43 @@
 pagination:
   data: collections
   size: 1
+  addAllPagesToCollections: true
   alias: tag
   filter:
     - all
-    - post
+    - posts
     - postsEnglish
     - tagsListGlobal
     - blogCategories
 layout: tagged-posts.liquid    
 eleventyComputed:
   title: Tutti gli articoli di "{{ tag }}"
+  eleventyNavigation:
+   title: Tutti gli articoli di "{{ tag }}"
+   key: Tutti gli articoli di "{{ tag }}"
+   parent: "Home"
 permalink: /tag/{{ tag | slugify }}/
 ---
 {% assign taggedCollections = collections[tag] |  italianPostsOnly %}
 {% for post in taggedCollections %}
-<div class="post">
+  <div class="post">
     <div class="left">
-        <img src="{{ post.data.imagePath }}" alt="">
+      <img src="{{ post.data.imagePath }}" alt="">
     </div>
     <div class="right">
-        <div class="top">
-            <p class="date">{{ post.date | date: '%B %e, %Y' }}</p>
-            <a href="{{ post.url }}">
-                <h2>{{ post.data.title }}</h2>
-            </a>
-            <p class="snippet" title="{{ post.data.snippet }}">{{ post.data.snippet }}</p>
-        </div>
-        <div class="tags">
-            {% assign tagsList = post.data.tags | removeDefaultTags %}
-            {% for tag in tagsList %}
-            <a href="/tag/{{tag | slugify}}" class="tag">#{{tag}}</a>
-            {% endfor %}
-        </div>
+      <div class="top">
+        <p class="date">{{ post.date | date: '%B %e, %Y' }}</p>
+        <a href="{{ post.url }}">
+          <h2>{{ post.data.title }}</h2>
+        </a>
+        <p class="snippet" title="{{ post.data.snippet }}">{{ post.data.snippet }}</p>
+      </div>
+      <div class="tags">
+        {% assign tagsList = post.data.tags | removeDefaultTags %}
+        {% for tag in tagsList %}
+          <a href="/tag/{{tag | slugify}}" class="tag">#{{tag}}</a>
+        {% endfor %}
+      </div>
     </div>
-</div>
+  </div>
 {% endfor %}
