--- a/styles/tagged-posts.scss
+++ b/styles/tagged-posts.scss
@@ -54,6 +54,7 @@ body {
     .title {
         font-size: var(--font-size-xl);
         line-height: 1.3;
+        text-transform: capitalize;
     }
 
     .subtitle {
